--- a/app.json
+++ b/app.json
@@ -31,6 +31,14 @@
       "eas": {
         "projectId": "686b1e5b-c91d-4b17-be07-cae0606cf752"
       }
-    }
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
+    ]
   }
 }
