--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "expo": "~49.0.15",
-    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
-    "fiction-expo-restart": "^2.0.0",
     "form-data": "^4.0.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
